--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,5 @@
     <dimen name="button_size">50dp</dimen>
     <dimen name="title_size">50dp</dimen>
     <dimen name="question_text_size">30sp</dimen>
-    <dimen name="jack_daniels_button">200dp</dimen>
+    <dimen name="rules_icon_size">20dp</dimen>
 </resources>
