--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,8 +67,10 @@
         <item name="android:textColor">@color/alert_dialog_text</item>
     </style>
 
-    <style name="MainButtons" parent="Base.TextAppearance.AppCompat.Button">
+    <!--> Tiles text them. -->
+    <style name="TilesTextTheme">
         <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
         <item name="textAllCaps">false</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">30sp</item>
@@ -76,15 +78,18 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="MainButtonPicolo" parent="MainButtons">
+    <!--> Picolo tile theme. -->
+    <style name="PicoloTile">
         <item name="android:background">@color/primary_picolo</item>
     </style>
 
-    <style name="MainButtonMoreOrLess" parent="MainButtons">
+    <!--> More or Less tile theme. -->
+    <style name="MoreOrLessTile">
         <item name="android:background">@color/primary_more_or_less</item>
     </style>
 
-    <style name="MainButtonRedOrBlack" parent="MainButtons">
+    <!--> Red or Black tile theme. -->
+    <style name="RedOrBlackTile">
         <item name="android:background">@color/primary_red_or_black</item>
     </style>
 
