--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="primary_margin">10dp</dimen>
     <dimen name="edit_text_name_margin">70dp</dimen>
+    <dimen name="tiles_margin">1dp</dimen>
+
     <dimen name="little_button_size">30dp</dimen>
     <dimen name="button_size">50dp</dimen>
     <dimen name="title_size">50dp</dimen>
