RED OR BLACK Ajout de la pyramide Possibilité d'utiliser plusieurs jeux de carte

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="accent">#ffffff</color>
     <color name="secondary">#55ffffff</color>
     <color name="black">#000000</color>
+    <color name="gold">#7c631e</color>
 
     <!-- Picolo. -->
     <color name="primary_picolo">#781a33</color>
