--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,7 @@
     <dimen name="button_size">50dp</dimen>
     <dimen name="title_size">50dp</dimen>
     <dimen name="question_text_size">30sp</dimen>
+    <dimen name="tiles_text_size">30sp</dimen>
+    <dimen name="normal_text_size">16sp</dimen>
     <dimen name="rules_icon_size">20dp</dimen>
 </resources>
