--- a/app/src/main/res/layout/activity_games_menu.xml
+++ b/app/src/main/res/layout/activity_games_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.jerome.a3grammes.GamesMenu"
-    android:background="@color/black">
+    android:background="@color/colorPrimary">
 
     <TableLayout
         android:layout_width="match_parent"
