--- a/app/src/main/res/layout/activity_red_or_black_settings.xml
+++ b/app/src/main/res/layout/activity_red_or_black_settings.xml
@@ -68,7 +68,16 @@
                     android:layout_height="wrap_content"
                     style="@style/MoreOrLessSettingsTheme"
                     android:gravity="center"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/normal_text_size"/>
+
+                <CheckBox
+                    android:id="@+id/enable_pyramid_check_box"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/end_with_pyramid"
+                    android:layout_gravity="center"
+                    style="@style/NormalWhiteText"
+                    android:checked="true"/>
 
             </LinearLayout>
 
