--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,7 +73,7 @@
         <item name="android:gravity">center</item>
         <item name="textAllCaps">false</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">@dimen/tiles_text_size</item>
         <item name="android:fontFamily">cursive</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -102,6 +102,12 @@
          <item name="android:textColor">@color/white</item>
          <item name="android:fontFamily">cursive</item>
      </style>
+
+    <!--> White text theme. -->
+    <style name="NormalWhiteText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
+    </style>
 
      <style name="Divider">
          <item name="android:layout_height">1dp</item>
