--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -33,7 +33,7 @@
     <style name="PicoloSettingsTheme" parent="MainTheme">
         <item name="colorPrimary">@color/primary_picolo</item>
         <item name="colorPrimaryDark">@color/primary_picolo_dark</item>
-        <item name="android:colorButtonNormal">@color/primary_picolo_dark</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_picolo_dark</item>
         <item name="android:colorBackground">@color/primary_picolo</item>
     </style>
 
@@ -41,7 +41,7 @@
     <style name="MoreOrLessSettingsTheme" parent="MainTheme">
         <item name="colorPrimary">@color/primary_more_or_less</item>
         <item name="colorPrimaryDark">@color/primary_more_or_less_dark</item>
-        <item name="android:colorButtonNormal">@color/primary_more_or_less_dark</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_more_or_less_dark</item>
         <item name="android:colorBackground">@color/primary_more_or_less</item>
     </style>
 
@@ -49,7 +49,7 @@
     <style name="RedOrBlackSettingsTheme" parent="MainTheme">
         <item name="colorPrimary">@color/primary_red_or_black</item>
         <item name="colorPrimaryDark">@color/primary_red_or_black_dark</item>
-        <item name="android:colorButtonNormal">@color/primary_red_or_black_dark</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_red_or_black_dark</item>
         <item name="android:colorBackground">@color/primary_red_or_black</item>
     </style>
 
@@ -57,9 +57,18 @@
     <style name="RedOrBlackTheme" parent="MainThemeGames">
         <item name="colorPrimary">@color/primary_red_or_black</item>
         <item name="colorPrimaryDark">@color/primary_red_or_black_dark</item>
-        <item name="android:colorButtonNormal">@color/primary_red_or_black_dark</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_red_or_black_dark</item>
         <item name="android:colorBackground">@color/primary_red_or_black</item>
      </style>
+
+    <!-- Picolo  theme. -->
+    <style name="PicoloTheme" parent="MainThemeGames">
+        <item name="colorPrimary">@color/primary_picolo</item>
+        <item name="colorPrimaryDark">@color/primary_picolo_dark</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_picolo_dark</item>
+        <item name="android:colorBackground">@color/primary_picolo</item>
+    </style>
+
 
     <!-- Dark Alert DIalog. -->
     <style name="MyAlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
@@ -102,6 +111,24 @@
          <item name="android:textColor">@color/white</item>
          <item name="android:fontFamily">cursive</item>
      </style>
+
+    <!--> Type of content style for Picolo -->
+    <style name="PicoloTypeOfContentText">
+        <item name="android:textSize">50sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">@dimen/primary_margin</item>
+    </style>
+
+    <!--> Contents text style for Picolo -->
+    <style name="PicoloContentsText">
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">@dimen/primary_margin</item>
+    </style>
 
     <!--> White text theme. -->
     <style name="NormalWhiteText">
