--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,24 +13,26 @@
     <color name="gold">#7c631e</color>
 
     <!-- Picolo. -->
-    <color name="primary_picolo">#997120</color>
-    <color name="primary_picolo_dark">#7b5b1a</color>
-    <color name="picolo_normal">#7b5b1a</color>
+    <color name="primary_picolo">#9ab0ba</color>
+    <color name="primary_picolo_dark">#5b6b73</color>
+    <color name="picolo_normal">#9ab0ba</color>
     <color name="picolo_sexy">#992052</color>
     <color name="picolo_dumb">#209979</color>
     <color name="picolo_hard">#212121</color>
 
     <!-- More or Less. -->
-    <color name="primary_more_or_less">#1b586b</color>
-    <color name="primary_more_or_less_dark">#123a46</color>
+    <color name="primary_more_or_less">#88775b</color>
+    <color name="primary_more_or_less_dark">#493f30</color>
 
     <!-- Red or Black. -->
-    <color name="primary_red_or_black">#2c461e</color>
-    <color name="primary_red_or_black_dark">#223617</color>
+    <color name="primary_red_or_black">#015d35</color>
+    <color name="primary_red_or_black_dark">#081a10</color>
 
     <!-- Dark Alert Dialog. -->
     <color name="alert_dialog_background">#1bffffff</color>
     <color name="alert_dialog_text">#000000</color>
+
+    <color name="transparent">#00000000</color>
 
 
 
