--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,6 +69,13 @@
         <item name="android:colorBackground">@color/primary_picolo</item>
     </style>
 
+    <!-- More Or Less Theme. -->
+    <style name="MoreOrLessTheme" parent="MainThemeGames">
+        <item name="colorPrimary">@color/primary_more_or_less</item>
+        <item name="colorPrimaryDark">@color/primary_more_or_less</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_picolo_dark</item>
+        <item name="android:colorBackground">@color/primary_picolo</item>
+    </style>
 
     <!-- Dark Alert DIalog. -->
     <style name="MyAlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
@@ -83,7 +90,6 @@
         <item name="textAllCaps">false</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/tiles_text_size</item>
-        <item name="android:fontFamily">cursive</item>
         <item name="android:textStyle">bold</item>
     </style>
 
