--- a/app/src/main/res/layout/activity_games_menu.xml
+++ b/app/src/main/res/layout/activity_games_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_games_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,8 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/picolo_title"
-                    style="@style/TilesTextTheme"
-                    android:layout_marginTop="@dimen/primary_margin"/>
+                    style="@style/TilesTextTheme" />
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -69,12 +69,12 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/more_or_less_button"
+                android:id="@+id/ttb_button"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:layout_weight="1"
-                style="@style/MoreOrLessTile"
+                style="@style/TTBTile"
                 android:layout_marginTop="@dimen/tiles_margin"
                 android:layout_marginRight="@dimen/tiles_margin"
                 android:layout_marginBottom="@dimen/tiles_margin">
@@ -82,9 +82,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/more_or_less_title"
-                    style="@style/TilesTextTheme"
-                    android:layout_marginTop="@dimen/primary_margin"/>
+                    android:text="@string/ttb_title"
+                    style="@style/TilesTextTheme"/>
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -105,7 +104,7 @@
                     android:orientation="horizontal">
 
                     <FrameLayout
-                        android:id="@+id/more_or_less_rules_button"
+                        android:id="@+id/ttb_rules_button"
                         android:layout_width="@dimen/button_size"
                         android:layout_height="@dimen/button_size"
                         android:layout_alignParentRight="true">
