--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <!--****************************************************************************************************-->
+    <!--***** MAIN *****************************************************************************************-->
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -29,6 +32,30 @@
         <item name="android:textColor">@color/accent</item>
     </style>
 
+    <!--> Titles theme. -->
+    <style name="MainTitle">
+        <item name="android:textSize">@dimen/title_size</item>
+        <item name="android:layout_margin">@dimen/primary_margin</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">cursive</item>
+    </style>
+
+    <!--> White text theme. -->
+    <style name="NormalWhiteText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
+    </style>
+
+    <style name="Divider">
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/blue</item>
+    </style>
+
+    <!--****************************************************************************************************-->
+    <!--***** SETTINGS**************************************************************************************-->
+
     <!-- Picolo Settings theme. -->
     <style name="PicoloSettingsTheme" parent="MainTheme">
         <item name="colorPrimary">@color/primary_picolo</item>
@@ -37,12 +64,12 @@
         <item name="android:colorBackground">@color/primary_picolo</item>
     </style>
 
-    <!-- More or less Settings theme. -->
-    <style name="MoreOrLessSettingsTheme" parent="MainTheme">
-        <item name="colorPrimary">@color/primary_more_or_less</item>
-        <item name="colorPrimaryDark">@color/primary_more_or_less_dark</item>
-        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_more_or_less_dark</item>
-        <item name="android:colorBackground">@color/primary_more_or_less</item>
+    <!-- Tic Tac Boom Settings theme. -->
+    <style name="TTBSettingsTheme" parent="MainTheme">
+        <item name="colorPrimary">@color/primary_ttb</item>
+        <item name="colorPrimaryDark">@color/primary_ttb_dark</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_ttb_dark</item>
+        <item name="android:colorBackground">@color/primary_ttb</item>
     </style>
 
     <!-- Red Or Black Settings theme. -->
@@ -53,6 +80,9 @@
         <item name="android:colorBackground">@color/primary_red_or_black</item>
     </style>
 
+    <!--****************************************************************************************************-->
+    <!--***** RED OR BLACK *********************************************************************************-->
+
     <!-- Red Or Black theme. -->
     <style name="RedOrBlackTheme" parent="MainThemeGames">
         <item name="colorPrimary">@color/primary_red_or_black</item>
@@ -61,6 +91,9 @@
         <item name="android:colorBackground">@color/primary_red_or_black</item>
      </style>
 
+    <!--****************************************************************************************************-->
+    <!--***** PICOLO ***************************************************************************************-->
+
     <!-- Picolo  theme. -->
     <style name="PicoloTheme" parent="MainThemeGames">
         <item name="colorPrimary">@color/primary_picolo</item>
@@ -68,55 +101,6 @@
         <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_picolo_dark</item>
         <item name="android:colorBackground">@color/primary_picolo</item>
     </style>
-
-    <!-- More Or Less Theme. -->
-    <style name="MoreOrLessTheme" parent="MainThemeGames">
-        <item name="colorPrimary">@color/primary_more_or_less</item>
-        <item name="colorPrimaryDark">@color/primary_more_or_less</item>
-        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_picolo_dark</item>
-        <item name="android:colorBackground">@color/primary_picolo</item>
-    </style>
-
-    <!-- Dark Alert DIalog. -->
-    <style name="MyAlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="android:background">@color/alert_dialog_background</item>
-        <item name="android:textColor">@color/alert_dialog_text</item>
-    </style>
-
-    <!--> Tiles text them. -->
-    <style name="TilesTextTheme">
-        <item name="android:layout_gravity">center</item>
-        <item name="android:gravity">center</item>
-        <item name="textAllCaps">false</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/tiles_text_size</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <!--> Picolo tile theme. -->
-    <style name="PicoloTile">
-        <item name="android:background">@color/primary_picolo</item>
-    </style>
-
-    <!--> More or Less tile theme. -->
-    <style name="MoreOrLessTile">
-        <item name="android:background">@color/primary_more_or_less</item>
-    </style>
-
-    <!--> Red or Black tile theme. -->
-    <style name="RedOrBlackTile">
-        <item name="android:background">@color/primary_red_or_black</item>
-    </style>
-
-    <!--> Titles theme. -->
-     <style name="MainTitle">
-         <item name="android:textSize">@dimen/title_size</item>
-         <item name="android:layout_margin">@dimen/primary_margin</item>
-         <item name="android:textStyle">bold</item>
-         <item name="android:gravity">center</item>
-         <item name="android:textColor">@color/white</item>
-         <item name="android:fontFamily">cursive</item>
-     </style>
 
     <!--> Type of content style for Picolo -->
     <style name="PicoloTypeOfContentText">
@@ -136,16 +120,81 @@
         <item name="android:layout_margin">@dimen/primary_margin</item>
     </style>
 
-    <!--> White text theme. -->
-    <style name="NormalWhiteText">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/normal_text_size</item>
+    <!--****************************************************************************************************-->
+    <!--***** TIC TAC BOOM *********************************************************************************-->
+
+    <!--Tic Tac Boom Theme. -->
+    <style name="TTBTheme" parent="MainThemeGames">
+        <item name="colorPrimary">@color/primary_ttb</item>
+        <item name="colorPrimaryDark">@color/primary_ttb</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_ttb_dark</item>
+        <item name="android:colorBackground">@color/primary_ttb</item>
     </style>
 
-     <style name="Divider">
-         <item name="android:layout_height">1dp</item>
-         <item name="android:background">@color/blue</item>
-     </style>
+    <!--> Division of question for TTB -->
+    <style name="TTBDivisionQuestionText">
+        <item name="android:textSize">50sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">@dimen/primary_margin</item>
+    </style>
+
+    <!--> Level of question for TTB -->
+    <style name="TTBLevelQuestionText">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_margin">@dimen/primary_margin</item>
+    </style>
+
+    <!--> Question for TTB -->
+    <style name="TTBQuestionText">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_margin">@dimen/primary_margin</item>
+    </style>
+
+    <!--****************************************************************************************************-->
+    <!--***** OTHER*****************************************************************************************-->
+
+    <!-- Dark Alert DIalog. -->
+    <style name="MyAlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:background">@color/alert_dialog_background</item>
+        <item name="android:textColor">@color/alert_dialog_text</item>
+    </style>
+
+    <!--****************************************************************************************************-->
+    <!--***** MENU *****************************************************************************************-->
+
+    <!--> Tiles text them. -->
+    <style name="TilesTextTheme">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/tiles_text_size</item>
+        <item name="android:fontFamily">cursive</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!--> Picolo tile theme. -->
+    <style name="PicoloTile">
+        <item name="android:background">@color/primary_picolo</item>
+    </style>
+
+    <!--> Tit Tac Boom tile theme. -->
+    <style name="TTBTile">
+        <item name="android:background">@color/primary_ttb</item>
+    </style>
+
+    <!--> Red or Black tile theme. -->
+    <style name="RedOrBlackTile">
+        <item name="android:background">@color/primary_red_or_black</item>
+    </style>
 
      <style name="EditTextName">
          <item name="android:layout_margin">@dimen/primary_margin</item>
