--- a/app/src/main/res/layout/activity_red_or_black_settings.xml
+++ b/app/src/main/res/layout/activity_red_or_black_settings.xml
@@ -3,7 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout_settings"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/rob_gradient">
 
         <LinearLayout
             android:orientation="vertical" android:layout_width="match_parent"
