--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,14 +3,15 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="primary_margin">10dp</dimen>
+    <dimen name="big_margin">25dp</dimen>
     <dimen name="edit_text_name_margin">70dp</dimen>
-    <dimen name="tiles_margin">1dp</dimen>
+    <dimen name="tiles_margin">5dp</dimen>
 
     <dimen name="little_button_size">30dp</dimen>
     <dimen name="button_size">50dp</dimen>
     <dimen name="title_size">50dp</dimen>
     <dimen name="question_text_size">30sp</dimen>
-    <dimen name="tiles_text_size">30sp</dimen>
+    <dimen name="tiles_text_size">16sp</dimen>
     <dimen name="normal_text_size">16sp</dimen>
     <dimen name="rules_icon_size">20dp</dimen>
 </resources>
