--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,26 +58,23 @@
 
     <!-- Picolo Settings theme. -->
     <style name="PicoloSettingsTheme" parent="MainTheme">
-        <item name="colorPrimary">@color/primary_picolo</item>
+        <item name="colorPrimary">@color/primary_picolo_dark</item>
         <item name="colorPrimaryDark">@color/primary_picolo_dark</item>
         <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_picolo_dark</item>
-        <item name="android:colorBackground">@color/primary_picolo</item>
     </style>
 
     <!-- Tic Tac Boom Settings theme. -->
     <style name="TTBSettingsTheme" parent="MainTheme">
-        <item name="colorPrimary">@color/primary_ttb</item>
+        <item name="colorPrimary">@color/primary_ttb_dark</item>
         <item name="colorPrimaryDark">@color/primary_ttb_dark</item>
         <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_ttb_dark</item>
-        <item name="android:colorBackground">@color/primary_ttb</item>
     </style>
 
     <!-- Red Or Black Settings theme. -->
     <style name="RedOrBlackSettingsTheme" parent="MainTheme">
-        <item name="colorPrimary">@color/primary_red_or_black</item>
+        <item name="colorPrimary">@color/primary_red_or_black_dark</item>
         <item name="colorPrimaryDark">@color/primary_red_or_black_dark</item>
         <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_red_or_black_dark</item>
-        <item name="android:colorBackground">@color/primary_red_or_black</item>
     </style>
 
     <!--****************************************************************************************************-->
@@ -173,12 +170,14 @@
     <!--> Tiles text them. -->
     <style name="TilesTextTheme">
         <item name="android:layout_gravity">center</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="textAllCaps">false</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/tiles_text_size</item>
-        <item name="android:fontFamily">cursive</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginTop">@dimen/primary_margin</item>
+        <item name="android:layout_marginBottom">@dimen/primary_margin</item>
     </style>
 
     <!--> Picolo tile theme. -->
